테이블은 이제... 그만!!

--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -1,4 +1,5 @@
 /* 이 거지같은 테이블은 뭐죠 시발! */
+/* 도움주신분 : well-made-plush(거즌 다작성해줌 ㅠ.ㅠ) */
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable,
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox {
     width: auto;
