지연 스크롤링 추가, 모바일 메뉴버튼 변경

--- a/css/default.css
+++ b/css/default.css
@@ -48,6 +48,10 @@ ol, ul, p {
     padding: 0;
 }
 
+p {
+    margin-bottom: 0.8rem;
+}
+
 ol {
     margin: 0 !important;
     margin-left: 2.2rem !important;
