--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -62,6 +62,10 @@
 
 /* Max-width: 798 메뉴 마지노선 테블릿 모드로 전환 시작하기위한 부분 */
 @media (max-width: 798px) {
+    .Liberty .nav-wrapper .navbar .navbar-nav .nav-item .fa {
+        text-align: center;
+        margin: 0 0.25rem;
+    }
     .Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link .hide-title {
         display: none;
     }
