--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -116,15 +116,29 @@
     margin: auto;
     text-align: center;
 }
+
 .Liberty .content-wrapper .liberty-content .liberty-content-main .thumbinner {
     margin: auto;
 }
 /* 섬네일 관련 End */
 
-/* 편집 관련 */
-.Liberty .content-wrapper .liberty-content .liberty-content-main .editOptions {
-    background-color: #f5f8fa;
-    border: 1px solid #e1e8ed;
-    padding: 1rem;
+/* 최근바뀜 관련(메뉴) */
+.Liberty .content-wrapper .liberty-content .liberty-content-main .mw-changeslist>h4 {
+    margin-bottom: 0.2rem;
 }
-/* 편집 관련 End */
+.Liberty .content-wrapper .liberty-content .liberty-content-main .special {
+    margin: 0;
+    padding: 0;
+    list-style-image: none;
+    list-style-type: none;
+}
+
+.Liberty .content-wrapper .liberty-content .liberty-content-main .special .mw-changeslist-separator {
+    display: none;
+}
+
+.Liberty .content-wrapper .liberty-content .liberty-content-main .special>li {
+    border-bottom: 1px solid #e1e8ed;
+    padding: 0.5rem 0;
+}
+/* 최근바뀜 관련(메뉴) End */
