자잘한거 수정 테이블 관련 css추가

--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -71,6 +71,7 @@
     margin-bottom: 0.6rem;
     padding-bottom: 0.6rem;
     overflow-wrap: break-word;
+    overflow: hidden;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main .mw-headline-number {
