--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -64,6 +64,10 @@
         height: 30rem;
     }
 
+    .Liberty .content-wrapper .liberty-content .liberty-content-main .mobile-table-wrapper {
+        overflow: scroll;
+    }
+
     .Liberty .content-wrapper .liberty-footer {
         padding: 0.5rem;
     }
