--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -1,5 +1,12 @@
 /* 이 거지같은 테이블은 뭐죠 시발! */
 /* 도움주신분 : well-made-plush(거즌 다작성해줌 ㅠ.ㅠ) */
+.Liberty .content-wrapper .liberty-content .liberty-content-main .liberty-table-wrapper {
+    display: block;
+    overflow-x: auto;
+    overflow-y: hidden;
+    max-width: 100%;
+}
+
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable,
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox {
     width: auto;
@@ -38,6 +45,7 @@
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable th {
     background-color: #f5f8fa;
     text-align: center;
+    word-break: keep-all;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable {
@@ -208,6 +216,7 @@
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox th {
     background-color: #f5f8fa;
     text-align: center;
+    word-break: keep-all;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr>th[rowspan]:first-child,
