--- a/css/default.css
+++ b/css/default.css
@@ -233,8 +233,9 @@ label {
     width: 10.8rem;
     padding: 0.2rem 0.4rem;
     border-color: #e1e8ed;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-radius: 0;
+    border-top-left-radius: 0.35rem;
+    border-bottom-left-radius: 0.35rem;
 }
 
 .Liberty .nav-wrapper .navbar .form-inline .form-control:focus {
@@ -715,6 +716,7 @@ label {
 .btn {
     border-color: #e1e8ed;
     box-shadow: none;
+    border-radius: 0.35rem;
 }
 
 .btn:hover {
