--- a/css/default.css
+++ b/css/default.css
@@ -565,10 +565,11 @@ label {
 .Liberty .content-wrapper .liberty-content .liberty-content-main .social-buttons {
     float: right;
     margin-bottom: 1rem;
+    width: 100%;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main .social-buttons>div {
-    float: left;
+    float: right;
     width: 2.5rem;
     height: 2.5rem;
     margin: 0;
