테이블 변경

--- a/css/default.css
+++ b/css/default.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6, b {
     font-family: "KoPubDotum B", "Noto Sans Korean", "Noto Sans", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
+input[type=password] {
+    font-family: sans-serif;
+}
+
 h1 {
     font-size: 2.0rem;
 }
