--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -4,7 +4,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     max-width: 100%;
-    display: inline;
+    /*display: inline; scroll바가 나타나지 않는 현상 발생*/
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main .table-right {
