스마트폰 환경에서의 검색창 크기 최적화

--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -138,6 +138,10 @@
         width: 100%;
         height: 15rem;
     }
+	
+	#searchform {
+		width:100%;
+	}
 }
 
 /* Max-width: 397px 대형폰 이하 시작 부분 */
