--- a/css/default.css
+++ b/css/default.css
@@ -177,7 +177,7 @@ del, s, strike {
 .Liberty .nav-wrapper .navbar .navbar-brand {
     height: 2.8rem;
     width: 6.6rem;
-    background: transparent url("../img/logo.png") no-repeat scroll left center/auto 1.9rem;
+    background: transparent url("../img/namuwiki_logo_kor_white_small.png") no-repeat scroll left center/auto 1.9rem;
     padding: 0;
     margin: 0;
 }
